unpackaged/main/default/objects/Student_Details__c/Student_Details__c.object-meta.xml
<CustomObject>
    <label>Student_Detail</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>RECORD_ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student_Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>