unpackaged/main/default/objects/Student_Details__c/fields/Adress__c.field-meta.xml
<CustomField>
    <fullName>Adress__c</fullName>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>