unpackaged/main/default/objects/Student_Details__c/fields/USN__c.field-meta.xml
<CustomField>
    <fullName>USN__c</fullName>
    <label>USN</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>