unpackaged/main/default/objects/Student_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Section__c</columns>
    <columns>USN__c</columns>
    <columns>Adress__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>